man3: Typos, missing heading.

--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -101,7 +101,7 @@ repository, as well as GPG verification and key addition.
 \&\f(CW\*(C`Tree.pm\*(C'\fR determines the location of scripts in the repository and local overrides directory.
 .SS SBO::Lib::Util
 .IX Subsection "SBO::Lib::Util"
-\&\f(CW\*(C`Util.pm\*(C'\fR contains utiliy functions for \f(CW\*(C`SBO::Lib\*(C'\fR and the sbotools. Configuration-related
+\&\f(CW\*(C`Util.pm\*(C'\fR contains utility functions for \f(CW\*(C`SBO::Lib\*(C'\fR and the sbotools. Configuration-related
 shared variables and the shared exit codes can be found here.
 .SH "EXIT CODES"
 .IX Header "EXIT CODES"
@@ -124,13 +124,14 @@ The sbotools share the following exit codes:
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Readme\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBSBO::Lib::Util\fR\|(3)
+\&\fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Readme\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBSBO::Lib::Util\fR\|(3)
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
 contributions from Luke Williams <xocel@iquidus.org> and Andreas
 Guldstrand <andreas.guldstrand@gmail.com>.
-.PP
+.SH MAINTAINER
+.IX Header "MAINTAINER"
 SBO::Lib is maintained by K. Eugene Carlson <kvngncrlsn@gmail.com>.
 .SH LICENSE
 .IX Header "LICENSE"
