--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -140,7 +140,7 @@ in advance, or \f(CW$undef\fR if none. The second value contains build options.
 .PP
 \&\fBNote\fR: This should really be changed.
 .PP
-\&\fBNote\fR: The previous note is old. I (KEC) agree that this module is asked to do
+\&\fBNote\fR: The previous note is old. I (KEC) agree that this subroutine is asked to do
 quite a lot. Keeping it in place might be the most parsimonious thing to do, but I
 have yet to look into the question closely.
 .SH "EXIT CODES"
@@ -154,13 +154,14 @@ Readme.pm subroutines can return the following exit codes:
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fBSBO::Lib\fR\|(3), \fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBSBO::Lib::Util\fR\|(3)
+\&\fBSBO::Lib\fR\|(3), \fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBSBO::Lib::Util\fR\|(3)
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
 contributions from Luke Williams <xocel@iquidus.org> and Andreas
 Guldstrand <andreas.guldstrand@gmail.com>.
-.PP
+.SH MAINTAINER
+.IX Header "MAINTAINER"
 SBO::Lib is maintained by K. Eugene Carlson <kvngncrlsn@gmail.com>.
 .SH LICENSE
 .IX Header "LICENSE"
