Better contact message for THANKS.

--- a/THANKS
+++ b/THANKS
@@ -43,5 +43,5 @@ qunying (requested build number upgrade notification)
 tuxuser1 (reported the overwritten source file bug)
 
 This file is incomplete; more research about early sbotools needs to be
-done. Please let me know if you should be in this file (or README.md)
-and you are not!
+done, and oversights do happen. Please contact the maintainer if you
+should be in this file (or README.md) and you are not!
