THANKS: Tweak the contact message

--- a/THANKS
+++ b/THANKS
@@ -58,6 +58,8 @@ travis-82 (requested tree download progress output)
 tuxuser1 (reported the overwritten source file bug)
 wgreenhouse (reported the local git repo chown bug)
 
-This file is almost certainly incomplete; information about pre-1.9
-sbotools is limited, and oversights do happen. Please contact the
-maintainer if you should be in this file (or README.md) and you are not!
+This file is almost certainly incomplete; information about pre-fork
+sbotools is limited, and oversights do happen. Please contact me if you
+should be in this file (or README.md) and you are not:
+
+  K. Eugene Carlson <kvngncrlsn@gmail.com>
