sbocheck: Mark blacklisted scripts with a preceding asterisk.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -31,7 +31,7 @@ sboconfig(1)
 or
 .B
 sbotools.conf(5)\fR\
-).
+). Blacklisted SlackBuilds are preceded with an asterisk.
 .P
 The three output categories are logged separately to
 .I
