sbocheck: Non-upgradable scripts get = in string.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -31,7 +31,16 @@ sboconfig(1)
 or
 .B
 sbotools.conf(5)\fR\
-). Blacklisted SlackBuilds are preceded with an asterisk.
+). Except in
+.B
+CLASSIC
+mode, scripts in the report that would not be upgraded by
+.B
+sboupgrade(1)
+are marked with an equals sign.
+.B
+=
+(equals sign).
 .P
 The three output categories are logged separately to
 .I
