--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,4 +1,4 @@
-.TH sboconfig 1 "Prickle-Prickle, Chaos 29, 3191 YOLD" "sbotools 3.4.1" sbotools
+.TH sboconfig 1 "Pungenday, Chaos 38, 3191 YOLD" "sbotools 3.4.2" sbotools
 .SH NAME
 .P
 .B
