--- a/man3/SBO::Lib::Info.3
+++ b/man3/SBO::Lib::Info.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Setting Orange, Chaos 30, 3191 YOLD" "" "sbotools 3.4.1"
+.TH SBO::Lib::Info 3 "Pungenday, Chaos 38, 3191 YOLD" "" "sbotools 3.4.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
