--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -1,4 +1,4 @@
-.TH sbotools.hints 5 "Prickle-Prickle, Chaos 29, 3191 YOLD" "sbotools 3.4.1" sbotools
+.TH sbotools.hints 5 "Pungenday, Chaos 38, 3191 YOLD" "sbotools 3.4.2" sbotools
 .SH NAME
 .P
 .B
