sbofind: Use -E for case-sensitive exact search.

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,4 +1,7 @@
 sbotools
+* Post-Release
+  * sbofind: Use --exact-case to search for an exact match with case sensitivity (thanks to leoctrl for the report)
+
 * 3.4.2 - 2025-02-07
   * Build.pm: When distcleaning, do not delete files that are needed later in the queue
   * sbohints: With --query, also report scripts that are optional dependencies; more grammatical output
