--- a/THANKS
+++ b/THANKS
@@ -48,6 +48,7 @@ hackedhead (requested installation templates and sboupgrade --all)
 iluvatar1 (reported an .info parse bug)
 januscan (requested strict version-up)
 jonasdemoor (requested download beavior documentation)
+leoctrl (reported sbofind case insensitivity)
 montagdude (reported sboinstall and sbosnap bugs)
 na3i09 (reported a compat32 sboremove bug)
 penduin (reported a Slackware -current version bug)
