--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -57,7 +57,8 @@ files and installed reverse dependencies.
 .B
 sbohints(1)
 .RS
-Query and modify the blacklist and optional dependency requests.
+Query and modify the blacklist and requests for optional dependencies and reverse
+dependency rebuilds.
 .RE
 .P
 .B
@@ -92,7 +93,7 @@ documents the
 .I
 /etc/sbotools/sbotools.hints
 file, which can be used to blacklist scripts and request optional
-dependencies.
+dependencies and automatic reverse dependency rebuilds.
 .SH STARTUP
 When using
 .B
