SBO::Lib.3: Removed stray comma.

--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib 3"
-.TH SBO::Lib 3 "Pungenday, Chaos 38, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib 3 "Setting Orange, Chaos 65, 3191 YOLD" "" "sbotools 3.4.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -85,7 +85,7 @@ queue begins.
 comparions, dependency calculation and the source downloading process.
 .SS SBO::Lib::Pkgs
 .IX Subsection "SBO::Lib::Pkgs"
-\&\f(CW\*(C`Pkgs.pm\*(C'\fR interacts with the Slackware package database to provide, tag and version information
+\&\f(CW\*(C`Pkgs.pm\*(C'\fR interacts with the Slackware package database to provide tag and version information
 for all installed packages.
 .SS SBO::Lib::Readme
 .IX Subsection "SBO::Lib::Readme"
