sboupgrade: reverse-rebuild is incompatible with noinstall.

--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -251,6 +251,9 @@ sboconfig(1)
 and
 .B
 sbotools.conf(5)\fR\
+\&. Incompatible with
+.B
+--reverse-rebuild\fR\
 \&.
 .RE
 .P
@@ -298,7 +301,10 @@ google-go-lang\fR\
 \&, does not work without first sourcing a version-specific profile script.
 .B
 --reverse-rebuild
-fails in such cases.
+fails in such cases. Incompatible with
+.B
+--noinstall\fR\
+\&.
 .RE
 .P
 .B
