--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -10,6 +10,7 @@ sbotools
   * sboupgrade: Add --reverse-rebuild to rebuild a reverse dependency queue upon upgrade
   * sbotools.hints: Prepend a tilde to a script to request automatic reverse dependency rebuilds upon upgrade
   * sbohints: Add and clear reverse dependency rebuild requests with -r and -cr
+  * sboinstall: Honor automatic reverse dependency rebuilds with --reinstall
 
 * 3.4.2 - 2025-02-07
   * Build.pm: When distcleaning, do not delete files that are needed later in the queue
