--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -11,6 +11,7 @@ sbotools
   * sbotools.hints: Prepend a tilde to a script to request automatic reverse dependency rebuilds upon upgrade
   * sbohints: Add and clear reverse dependency rebuild requests with -r and -cr
   * sboinstall: Honor automatic reverse dependency rebuilds with --reinstall
+  * sboinstall, sboupgrade: Automatically reuse saved build options with --nointeractive unless passing --norecall
 
 * 3.4.2 - 2025-02-07
   * Build.pm: When distcleaning, do not delete files that are needed later in the queue
