--- a/man3/SBO::Lib::Build.3
+++ b/man3/SBO::Lib::Build.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Build 3"
-.TH SBO::Lib::Build 3 "Setting Orange, Chaos 65, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib::Build 3 "Boomtime, Chaos 67, 3191 YOLD" "" "sbotools 3.4.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -185,7 +185,8 @@ If any circular reverse dependencies are found, the script exits with \f(CW\*(C`
 .Ve
 .PP
 \&\f(CWget_full_reverse_queue()\fR takes any number of SlackBuilds and returns a queue for a
-reverse rebuild and a warnings hash.
+reverse rebuild and a warnings hash. Running this subroutine more than once is not
+advised for performance reasons.
 .SS get_pkg_name
 .IX Subsection "get_pkg_name"
 .Vb 1
