Readme.pm: Default to 'yes' for the saved build options prompt.

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -12,6 +12,7 @@ sbotools
   * sbohints: Add and clear reverse dependency rebuild requests with -r and -cr
   * sboinstall: Honor automatic reverse dependency rebuilds with --reinstall
   * sboinstall, sboupgrade: Automatically reuse saved build options with --nointeractive unless passing --norecall
+  * Readme.pm: Default "yes" when saved build options are offered
 
 * 3.4.2 - 2025-02-07
   * Build.pm: When distcleaning, do not delete files that are needed later in the queue
