--- a/man3/SBO::Lib::Build.3
+++ b/man3/SBO::Lib::Build.3
@@ -181,12 +181,13 @@ If any circular reverse dependencies are found, the script exits with \f(CW\*(C`
 .SS get_full_reverse_queue
 .IX Subsection "get_full_reverse_queue"
 .Vb 1
-\&  my (@full_reverse_queue, %warnings) = get_full_reverse_queue($from, [$updates], $sbo ...)
+\&  my (@full_reverse_queue, %warnings) = get_full_reverse_queue($from, [$updates, $self_include], $sbo ...)
 .Ve
 .PP
-\&\f(CWget_full_reverse_queue()\fR takes the name of the script it is called from, the list
-of available updates (if called from sboupgrade) and any number of SlackBuilds. It
-returns a queue for a reverse rebuild and a warnings hash.
+\&\f(CWget_full_reverse_queue()\fR takes the name of the script it is called from and any number
+of SlackBuilds. The second variable is the list of available upgrades (if called from sboupgrade),
+any true value if called from \f(CW\*(C`sboinstall \-\-reinstall\*(C'\fR and a false value otherwise. The
+subroutine returns a queue for a reverse dependency rebuild and a warnings hash.
 .SS get_pkg_name
 .IX Subsection "get_pkg_name"
 .Vb 1
